--- a/Maraton/WebContent/ZonaUsuario.css
+++ b/Maraton/WebContent/ZonaUsuario.css
@@ -3,11 +3,21 @@
 	padding: 0px
 }
 
+
+
+body{
+	background-color: #A9F5F2;
+}
+
+button{
+	margin-left: 0.5em;
+	padding: 1% 2%;
+}
+
 form{
 	text-align: center;	
 	display: block;
 }
-
 
 #contenedor{
 	font: verdana;
